--- a/day3/study-api/package.json
+++ b/day3/study-api/package.json
@@ -13,6 +13,8 @@
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
+    "recoil": "^0.7.7",
+    "swr": "^2.2.5",
     "uuid": "^10.0.0",
     "zustand": "^4.5.4"
   },
