--- a/day3/study-api/package.json
+++ b/day3/study-api/package.json
@@ -9,12 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@tanstack/react-query": "^5.50.1",
+    "@reduxjs/toolkit": "^2.2.6",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
-    "uuid": "^10.0.0",
-    "zustand": "^4.5.4"
+    "react-redux": "^9.1.2",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.4.1",
